<resources>
    <string name="app_name">Fullscreen Web Page</string>
    <string name="title_activity_settings">Settings</string>

    <string name="url_settings_key">url_settings_key</string>
    <string name="javascript_settings_key">javascript_settings_key</string>
    <string name="app_auto_start_settings_key">app_autostart_settings_key</string>

    <string name="default_url">https://example.com/</string>

    <string name="link_settings_desc">Link settings</string>
    <string name="webview_settings_desc">Webview settings</string>

    <string name="url_settings_text">URL</string>

    <string name="first_run_url_config_text">URL IS NOT CONFIGURED!</string>
    <string name="open_settings_button_toast">
        In order to open the application settings, you just have to click %N times</string>

    <string name="shortcut_settings_label">Fullscreen Web Page Settings</string>
    <string name="auto_start_receiver_label">Fullscreen Web Page auto start</string>
    <string name="app_settings_desc">App settings</string>
    <string name="app_auto_start_settings_text">Start app on boot</string>
    <string name="other_settings_title">Other</string>

    <string name="author">Author on Github</string>
    <string name="author_v2">Developed by Anodev (OPHoperHPO)</string>
    <string name="author_url">https://github.com/OPHoperHPO</string>
    <string name="app_github_settings_text">This app on Github</string>
    <string name="app_url">https://github.com/OPHoperHPO/android-fullscreen-webpage</string>



</resources>
