<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/link_settings_desc">
        <EditTextPreference
            android:defaultValue="@string/default_url"
            android:key="@string/url_settings_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/url_settings_text" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_settings_desc">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/app_auto_start_settings_key"
            android:switchTextOff="false"
            android:switchTextOn="true"
            android:title="@string/app_auto_start_settings_text" />
    </PreferenceCategory>

</PreferenceScreen>
